Changelog
=========

0.5.2 - unreleased
------------------



0.5.1 - 2010-11-02
------------------

* Make sure form.extractData() does not raise an AttributeError if the method is
  called before the form is available (first page load).
  [timo]

* This package now uses the plone i18n domain.
  [vincentfretin]

* Added option to override <form action="">.
  [miohtama]

* Updated README regarding form action and method.
  [miohtama]


0.5.0 - 2010-04-20
------------------

* Render errors from group form widget manager validators.  Fixes
  http://code.google.com/p/dexterity/issues/detail?id=96
  [davisagli]

* Default to showing the default fieldset, rather than the first non-default
  fieldset.
  [davisagli]

* Replace the required field indicator image with a unicode box, refs
  http://dev.plone.org/plone/ticket/10352
  [davisagli, limi]

* Replaced the existing radiobutton-based boolean widget with the standard
  single checkbox Plone version.
  [limi]

* Add @@ploneform-render-widget view, so that the widget chrome can be
  customized for particular widget types.
  [davisagli]

* Added slots to the ``titlelessform`` macro. See ``README.txt`` in
  ``plone.z3cform`` for details.
  [optilude, davisagli]

* Cleaned up templates to match Plone 4 conventions.
  [optilude]

* Made templates and inline validation work with standalone forms as supported
  by plone.z3cform 0.6 and later.
  [optilude]

* Installed a browser layer IPloneFormLayer with this package's extension
  profile. This inherits from z3c.form's IFormLayer, allowing the default
  widgets to work. You should always install this package in
  portal_quickinstaller before using z3c.form forms in Plone.
  [optilude]

* Made the textlines widget the default for sequence types with text/ascii
  line value types. The default widget from z3c.form is too confusing.
  [optilude]
  
* Use form method defined in form class. This allows HTTP GET forms.