@@ -88,11 +88,9 @@ This is wired up with KSS. When the user leaves a form control with inline
 validation enabled, it will be called with the following parameters:
 
     >>> view.validate_input(formname=u'test-form', fieldname=u'form.widgets.age', value='Title')
-    [{'selectorType': 'css', 'params': {'html': u'<![CDATA[The entered value is not a valid integer literal.]]>', 'withKssSetup': u'True'},
-      'name': 'replaceInnerHTML',
-      'selector': u'#formfield-form-widgets-age div.fieldErrorBox'},
+    [{'selectorType': 'css', 'params': {}, 'name': 'clearChildNodes', 'selector': u'#formfield-form-widgets-age div.fieldErrorBox'},
      {'selectorType': 'css',
-      'params': {'value': u'error'},
+      'params': {'value': u'error warning'},
       'name': 'addClass',
       'selector': u'#formfield-form-widgets-age'}]
 
@@ -102,6 +100,7 @@ validation enabled, it will be called with the following parameters:
     >>> view.validate_input(formname=u'test-form', fieldname=u'form.widgets.age', value='20')
     [{'selectorType': 'css', 'params': {}, 'name': 'clearChildNodes', 'selector': u'#formfield-form-widgets-age div.fieldErrorBox'},
      {'selectorType': 'css', 'params': {'value': u'error'}, 'name': 'removeClass', 'selector': u'#formfield-form-widgets-age'},
+     {'selectorType': 'css', 'params': {'value': u'warning'}, 'name': 'removeClass', 'selector': u'#formfield-form-widgets-age'},
      {'selectorType': 'css', 'params': {'name': u'display', 'value': u'none'}, 'name': 'setStyle', 'selector': '.portalMessage'},
      {'selectorType': 'htmlid', 'params': {'html': u'<![CDATA[<dt>Info</dt><dd></dd>]]>', 'withKssSetup': u'True'},
       'name': 'replaceInnerHTML', 'selector': 'kssPortalMessage'},
@@ -123,11 +122,9 @@ field 'name' that's part of a group. Inline validation is invoked via the
 The validation view takes an Attribute fieldset with the index of the group.
 
     >>> view.validate_input(formname=u'test-group-form', fieldname=u'form.widgets.name', fieldset="0", value='')
-    [{'selectorType': 'css', 'params': {'html': u'<![CDATA[Required input is missing.]]>', 'withKssSetup': u'True'},
-      'name': 'replaceInnerHTML',
-      'selector': u'#fieldset-0 #formfield-form-widgets-name div.fieldErrorBox'},
+    [{'selectorType': 'css', 'params': {}, 'name': 'clearChildNodes', 'selector': u'#fieldset-0 #formfield-form-widgets-name div.fieldErrorBox'},
      {'selectorType': 'css',
-      'params': {'value': u'error'},
+      'params': {'value': u'error warning'},
       'name': 'addClass',
       'selector': u'#fieldset-0 #formfield-form-widgets-name'}]
 
@@ -137,6 +134,7 @@ The validation view takes an Attribute fieldset with the index of the group.
     >>> view.validate_input(formname=u'test-group-form', fieldname=u'form.widgets.name', fieldset="0", value=u'Name')
     [{'selectorType': 'css', 'params': {}, 'name': 'clearChildNodes', 'selector': u'#fieldset-0 #formfield-form-widgets-name div.fieldErrorBox'},
      {'selectorType': 'css', 'params': {'value': u'error'}, 'name': 'removeClass', 'selector': u'#fieldset-0 #formfield-form-widgets-name'},
+     {'selectorType': 'css', 'params': {'value': u'warning'}, 'name': 'removeClass', 'selector': u'#fieldset-0 #formfield-form-widgets-name'},
      {'selectorType': 'css', 'params': {'name': u'display', 'value': u'none'}, 'name': 'setStyle', 'selector': '.portalMessage'},
      {'selectorType': 'htmlid', 'params': {'html': u'<![CDATA[<dt>Info</dt><dd></dd>]]>', 'withKssSetup': u'True'},
       'name': 'replaceInnerHTML', 'selector': 'kssPortalMessage'},
@@ -157,8 +155,10 @@ field 'name' that's part of a group. Inline validation is invoked via the
     >>> view = getMultiAdapter((context, request), name=u"kss_z3cform_inline_validation")
 
 The validation view takes an Attribute fieldset with the index of the group.
+The error is only shown when warning_only is explicitly switched off (matching
+the behavior of archetypes.)
 
-    >>> view.validate_input(formname=u'test-group-form', fieldname=u'form.widgets.name', fieldset="0", value='')
+    >>> view.validate_input(formname=u'test-group-form', fieldname=u'form.widgets.name', fieldset="0", value='', warning_only=False)
     [{'selectorType': 'css', 'params': {'html': u'<![CDATA[Erforderliche Eingabe fehlt.]]>', 'withKssSetup': u'True'},
       'name': 'replaceInnerHTML',
       'selector': u'#fieldset-0 #formfield-form-widgets-name div.fieldErrorBox'},
